168-FE: Fix inconsistent date input height & text vertical align

--- a/Okane.Client/src/shared/styles/components/_form.scss
+++ b/Okane.Client/src/shared/styles/components/_form.scss
@@ -1,4 +1,4 @@
 .form-input {
-  min-height: 2.3rem;
+  height: 2.3rem;
   padding-inline: var(--space-xs);
 }
